[package]
name = "consul-reaper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = {version = "1.17.0", features = ["serde"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3"}
thiserror = "2.0.12"
clap = { version = "4.5.40", features = ["derive", "env"] }
url = "2.5.4"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
serial_test = "2"
rand = "0.9.1"
