[package]
name = "consul-reaper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json", "query"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = {version = "1.23.1", features = ["serde"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3"}
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive", "env"] }
url = "2.5.8"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.7"
serial_test = "3"
rand = "0.10.1"
